# political-pathology-workbench

./: .gitignore  AGENT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  research-data-review.yml  tooling-bug.yml
.github/workflows/: publish-pages.yml  render-site.yml  validate.yml
bibliography/: sources.csl.json
data/claim-promotion/: draft-claims.json  promotion-gates.json  promotion-registry.json
data/coding/: README.md
data/corpora/: corpus-registry.json
data/cross-case/: comparison-table.json
data/evidence-modules/: module-registry.json
docs/: data-dictionary.md  provenance.md  source-access-policy.md  status.md
schemas/: artifact.schema.json  case.schema.json  child-issue-migration-manifest.schema.json  claim-promotion.schema.json  claim.schema.json  coder-score.schema.json  common.schema.json  controlled-vocab.schema.json  corpus-artifact.schema.json  corpus-registry.schema.json  counterclaim.schema.json  evidence-module.schema.json  interpretation.schema.json  passage.schema.json  score.schema.json  search-log.schema.json  source.schema.json  theory.schema.json
site/: _quarto.yml  index.qmd  pre-render.py  references.qmd
site/cases/: index.qmd  (+21 more)
tests/: run-claim-promotion-fixtures.js  run-corpus-fixtures.js  run-evidence-module-fixtures.js  run-migration-fixtures.js
types/: case.d.ts  claim.d.ts  interpretation.d.ts  passage.d.ts  score.d.ts  source.d.ts  theory.d.ts
(+343 files in other folders)
