[project]
name = "political-pathology-workbench"
version = "0.1.0"
description = "Analytical Python helpers for the Political Pathology Workbench research spike."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src-py"}

[tool.setuptools.packages.find]
where = ["src-py"]
